# HTTP-log-monitoring-console

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  vcpkg.json
cmake/: warnings.cmake
src/: log_monitoring.cpp
src/lib/: alerting.cpp  alerting.h  channel.h  csv_log_reader.cpp  csv_log_reader.h  display.cpp  display.h  metrics_tracking.cpp  metrics_tracking.h  monitoring.cpp  monitoring.h  tools.cpp  tools.h  traffic_alert.h  traffic_log.h  window_metrics.h
src/test/: alerting_test.cpp  metrics_tracking_tests.cpp  tools_test.cpp
